--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ multidict==6.0.4
 Pillow==9.4.0
 psycopg2-binary==2.9.9
 python3-openid==3.2.0
+python-dotenv==0.10.1
 regex==2023.10.3
 requests==2.28.2
 soupsieve==2.5
